--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,12 @@
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "formik": "^2.4.9",
+    "i18next": "^25.8.4",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.5.4",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.12.0",
     "socket.io-client": "^4.8.3",
