--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-functional": "^9.0.2",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react": "^7.37.5",
@@ -42,6 +43,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "eslint-plugin-testing-library": "^7.15.4",
     "globals": "^16.5.0",
+    "prettier": "^3.8.1",
     "vite": "^7.2.4"
   }
 }
